# Chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  profile.md  pyproject.toml
.github/workflows/: huggingface-file-size.yml  sync-huggingface.yml
guardrails/: scope.py
limits/: __init__.py  ratelimit.py
